--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "5.1.3",
     "jquery": "3.6.0",
     "react": "18.0.0",
+    "react-bootstrap": "2.2.3",
     "react-dom": "18.0.0",
     "react-scripts": "4.0.0"
   },
@@ -22,5 +23,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
