--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "18.0.0",
     "react-bootstrap": "2.2.3",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
