--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "5.1.3",
     "react": "18.0.0",
     "react-bootstrap": "2.2.3",
     "react-dom": "18.0.0",
